# job-application-tracker

./: README.md  application_repository.py  database.py  main.py  model.py  pyproject.toml  schema.py  seed.py  services.py
api/: application_route.py  view_route.py
core/: database.py  static.py
static/css/: app_style.css  style.css
static/js/: script.js
templates/: application_detail.html  applications.html  base.html  dashboard.html
templates/partials/: application_form.html  application_list.html
